[package]
name = "kalc-plot"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "a complex graphing gui"
authors = ["bgkillas <mswalhelm@gmail.com>"]
repository = "https://github.com/bgkillas/kalc-plot"
homepage = "https://github.com/bgkillas/kalc-plot"

[profile.release]
lto = true
strip = true
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1

[profile.dev]
opt-level = 1

[features]
default=["skia-vulkan", "rug","fastnum", "vulkano-x11","x11", "wayland", "rayon", "bincode", "arboard"]
#default=["egui","rug","fastnum","rayon", "bincode", "arboard"]
#default=["skia-vulkan","rug","fastnum","wayland", "rayon", "bincode", "arboard"]
#default=["skia","rug","fastnum","wayland","softbuffer","softbuffer-wayland", "rayon", "bincode", "arboard"]
#default=["tiny-skia","rug","fastnum", "wayland", "softbuffer", "softbuffer-wayland"]
egui=["dep:egui","dep:eframe","rupl/egui"]
skia=["rupl/skia" ,"rupl/winit", "dep:winit"]
tiny-skia=["rupl/tiny-skia" ,"rupl/winit", "dep:winit"]
softbuffer = ["dep:softbuffer"]
rayon=["dep:rayon", "rupl/rayon", "kalc-lib/rayon"]
bincode=["dep:bitcode", "dep:serde", "rupl/serde", "dep:dirs", "kalc-lib/serde"]
arboard=["rupl/arboard"]
force-cross=["kalc-lib/force-cross"]
system-libs=["kalc-lib/system-libs"]
skia-vulkan=["rupl/skia-vulkan", "skia"]
x11=["winit/x11"]
wayland=["winit/wayland"]
vulkano-x11=["rupl/vulkano-x11"]
softbuffer-x11=["softbuffer/x11"]
softbuffer-wayland=["softbuffer/wayland"]
rug=["kalc-lib/rug"]
fastnum=["kalc-lib/fastnum"]

[dependencies]
egui={version="0.31.1",default-features = false,optional=true}
eframe={version="0.31.1",optional=true}
winit={version="0.30.11", default-features=false, features = ["rwh_06"],optional=true}
softbuffer={version="0.4.6",default-features = false,optional=true}
rayon={version="1.10.0", optional=true}
dirs={version="6.0.0", optional=true}
bitcode = {version="0.6.6",features = ["serde"],optional = true}
serde = {version = "1.0.219", features = ["derive"], optional = true}
rupl={version = "0.1.1",path="../rupl",default-features = false}
kalc-lib={version="1.5.0",default-features=false,features = ["fastrand"],path="../kalc-lib"}
