[package]
name = "kalc-plot"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "a complex graphing gui"
authors = ["bgkillas <mswalhelm@gmail.com>"]
repository = "https://github.com/bgkillas/kalc-plot"
homepage = "https://github.com/bgkillas/kalc-plot"

[profile.release]
lto = true
strip = true
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[profile.dev]
opt-level = 1

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default=["skia-vulkan", "rug","fastnum", "vulkano-x11","x11", "wayland", "rayon", "bincode", "arboard"]
#default=["egui","rug","fastnum","rayon", "bincode", "arboard"]
#default=["skia-vulkan","rug","fastnum","wayland", "rayon", "bincode", "arboard"]
#default=["skia","rug","fastnum","wayland","softbuffer","softbuffer-wayland", "rayon", "bincode", "arboard"]
#default=["tiny-skia","rug","fastnum", "wayland", "softbuffer", "softbuffer-wayland"]
egui=["dep:egui","dep:eframe","rupl/egui"]
skia=["rupl/skia" ,"rupl/winit", "dep:winit"]
tiny-skia=["rupl/tiny-skia" ,"rupl/winit", "dep:winit", "rupl/tiny-skia-png", "rupl/tiny-skia-text"]
softbuffer = ["dep:softbuffer"]
rayon=["dep:rayon", "rupl/rayon", "kalc-lib?/rayon"]
bincode=["dep:bitcode", "dep:serde", "rupl/serde", "dep:dirs", "kalc-lib?/serde"]
arboard=["rupl/arboard"]
force-cross=["kalc-lib/force-cross"]
system-libs=["kalc-lib/system-libs"]
skia-vulkan=["rupl/skia-vulkan", "skia"]
x11=["winit/x11"]
wayland=["winit/wayland"]
vulkano-x11=["rupl/vulkano-x11"]
softbuffer-x11=["softbuffer/x11"]
softbuffer-wayland=["softbuffer/wayland"]
rug=["kalc-lib/rug","kalc-lib"]
fastnum=["kalc-lib/fastnum","kalc-lib"]
kalc-lib=["dep:kalc-lib"]
wasm=["dep:wasm-bindgen", "rupl/wasm"]
wasm-draw=["rupl/wasm-draw", "wasm", "rupl/winit", "dep:winit"]
wee=["dep:wee_alloc"]
wasm-console = ["dep:console_error_panic_hook"]

[dependencies]
egui={version= "0.32.1",default-features = false,optional=true}
eframe={version= "0.32.1",optional=true}
winit={version="0.30.12", default-features=false, features = ["rwh_06"],optional=true}
softbuffer={version="0.4.6",default-features = false,optional=true}
rayon={version="1.11.0", optional=true}
dirs={version="6.0.0", optional=true}
bitcode = {version="0.6.7",features = ["serde"],optional = true}
serde = {version = "1.0.219", features = ["derive"], optional = true}
rupl={version = "0.1.2",path="../rupl",default-features = false}
kalc-lib={version="1.5.1",default-features=false,features = ["fastrand"],path="../kalc-lib",optional = true}
wasm-bindgen = {version="0.2.100",optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = {version = "0.4.5", optional = true}
